...
                    Text("Share")
                }
                Button(
                    onClick = onNavigate,
                    modifier = Modifier
                        .weight(1f)
                        .testTag("route_info_navigate_button"),
                    contentPadding = PaddingValues(horizontal = 8.dp, vertical = 12.dp), // Reduce horizontal padding
                ) {
                    Icon(Icons.Default.Navigation, contentDescription = null, modifier = Modifier.size(18.dp))
                    Spacer(modifier = Modifier.width(4.dp))
                    Text(
                        "Navigate",
...
