...
                        MaterialTheme.colorScheme.error
                    } else {
                        MaterialTheme.colorScheme.tertiary
                    },
                ),
            ) {
                Text("Upgrade")
            }
        }
    }
}


...
